# Artificial-Mind-Agent

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: critic.py  planner.py  thinker.py
artificial_mind/: __init__.py  __main__.py  bus.py  cli.py  config.py  discoveries.py  evolution.py  identity.py  llm.py  mcp_server.py  memory.py  orchestrator.py  skills.py  world.py
artificial_mind/agents/: __init__.py  base.py  critic.py  discoverer.py  dreamer.py  experimenter.py  planner.py  researcher.py  synthesizer.py  thinker.py
artificial_mind/tools/: __init__.py  builtin.py  registry.py
config/: goal.md  identity.md
core/: brain.py  executor.py  memory.py
experiments/: experiment_60.txt
memory/journal/: 0001.md  0002.md  0003.md  0057.md  0058.md  0059.md  0060.md  0061.md  0062.md  0063.md  0064.md  0065.md  0066.md  0067.md  0068.md  0069.md  0070.md  0071.md  0072.md  0073.md  0074.md  0075.md  0076.md  0077.md  0078.md  0079.md  0080.md  0081.md  0082.md  0083.md  0084.md  0085.md  0086.md  0087.md  0088.md  0089.md  0090.md  0091.md  0092.md  0093.md  (+72 more)
tests/: conftest.py  test_bus.py  test_cli.py  test_evolution.py  test_llm.py  test_memory.py  test_orchestrator.py  test_skills.py  test_tools.py
